--- a/front/style.css
+++ b/front/style.css
@@ -34,3 +34,10 @@ h1 {
 	display: flex;
 	flex-direction: column;
 }
+
+#generatedCurlCmd {
+	position: absolute;
+	bottom: 30vh;
+	left: 50%;
+	transform: translateX(-50%);
+}
